fix wrong img path of bg.gif
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,6 @@ a:active {
 #header_bg {
   height: 200px;
   margin-bottom: 20px;
-  background: url('img/bg.gif') repeat-x;
+  background: url('../img/bg.gif') repeat-x;
 }
 
