--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,10 @@ a:active {
   background: url('../img/bg.gif') repeat-x;
 }
 
+#header {
+  color: white;
+}
+
+#header h1 {
+  margin-top: 100px;
+}
