--- a/css/main.css
+++ b/css/main.css
@@ -48,5 +48,10 @@ a:active {
 }
 
 #header h1 {
-  margin-top: 100px;
+  margin-top: 35%;
+}
+
+#header span {
+  font-size: 14px;
+  font-weight: bold;
 }
