regulate #header span style
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,8 @@ a:active {
 }
 
 #header span {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
+  font-style: italic;
+  margin-left: 30px;
 }
