replace new background img with bg1.gif
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ a:active {
 #header_bg {
   height: 200px;
   margin-bottom: 20px;
-  background: url('../img/bg.gif') repeat-x;
+  background: url('../img/bg1.gif') repeat-x;
 }
 
 #header {
