--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ thead {
 #header_bg {
   height: 200px;
   margin-bottom: 20px;
-  background: url('../img/bg1.gif') repeat-x;
+  background: url('../img/bg.gif') repeat-x;
 }
 
 #header {
