--- a/css/article.css
+++ b/css/article.css
@@ -5,7 +5,7 @@
 #header_bg {
   height: 160px;
   margin-bottom: 20px;
-  background: url('../img/bg1.gif') repeat-x;
+  background: url('../img/bg.gif') repeat-x;
 }
 
 #header {
