--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,11 @@
 body {
 	background: #fff;
 	padding-top: 40px;
+	font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei UI","Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;
+}
+
+code, pre {
+	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
 }
 
 #stat {
