--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 	font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei UI","Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;
 }
 
-code, pre {
+tt, code, pre {
 	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
 }
 
