--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,9 @@ tt, code, pre {
 
 #announcement {
   margin-top: 20px;
-  background-color: #fff;
+  border: 1px solid #f0f0f0;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 #top_comment {
