remove pull-right in small backend
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/local/asciidoctor/small/html5/document.html.erb
+++ b/local/asciidoctor/small/html5/document.html.erb
@@ -165,7 +165,7 @@ unless !footnotes? || attr?(:nofootnotes) %>
   end %>
 </div><%
 end %>
-<div id="article_comment" class="pull-right"></div>
+<div id="article_comment"></div>
 </div> <!-- row-fuild-->
 </div> <!-- container--><%
 unless nofooter %>
